--- a/hiera.yaml
+++ b/hiera.yaml
@@ -2,7 +2,7 @@
 :backends:
     - yaml
 :hierarchy:
-    - "%{::clientcert}"
+    - "nodes/%{::hostname}"
     - common
 :yaml:
     # datadir is empty here, so hiera uses its defaults:
