profiles::base::ntp_server to ntp_servers

--- a/hieradata/nodes/lnode1.yaml
+++ b/hieradata/nodes/lnode1.yaml
@@ -1,5 +1,5 @@
 ---
 
-profiles::base::ntp_servers:
-    - 0.pool.ntp.org
-    - 1.pool.ntp.org
+ntp_servers:
+  - 0.pool.ntp.org
+  - 1.pool.ntp.org
