--- a/hieradata/nodes/lnode1.yaml
+++ b/hieradata/nodes/lnode1.yaml
@@ -9,7 +9,7 @@ ntp_servers:
 
 postfix_myhostname: 'mail.sourcecurrent.net'
 postfix_mydomain: 'sourcecurrent.net'
-postfix_mydestination: "\$myhostname, localhost.\$mydomain, localhost, %{::fqdn}, %{::hostname}"
+postfix_mydestination: "$myhostname, localhost.$mydomain, localhost, %{::fqdn}, %{::hostname}"
 postfix_inet_interfaces: 'all'
 postfix_mail_name: 'sourcecurrent.net mail system'
 postfix_mynetworks: '127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128'
