--- a/hiera.yaml
+++ b/hiera.yaml
@@ -1,13 +1,14 @@
 ---
 :backends:
     - yaml
+    - eyaml
 :hierarchy:
     - "nodes/%{::hostname}"
     - common
 :yaml:
-    # datadir is empty here, so hiera uses its defaults:
-    # # - /var/lib/hiera on *nix
-    # # - %CommonAppData%\PuppetLabs\hiera\var on Windows
-    # # When specifying a datadir, make sure the directory exists.
     :datadir: "/etc/puppet/environments/%{environment}/hieradata"
+:eyaml:
+    :datadir: "/etc/puppet/environments/%{environment}/hieradata"
+    :pkcs7_private_key: "/etc/puppet/keys/private_key.pkcs7.pem"
+    :pkcs7_public_key: "/etc/puppet/keys/public_key.pkcs7.pem"
 :merge_behavior: deeper
