--- a/hiera.yaml
+++ b/hiera.yaml
@@ -8,6 +8,7 @@
 :yaml:
     :datadir: "/etc/puppet/environments/%{environment}/hieradata"
 :eyaml:
+    :extension: 'yaml'
     :datadir: "/etc/puppet/environments/%{environment}/hieradata"
     :pkcs7_private_key: "/etc/puppet/keys/private_key.pkcs7.pem"
     :pkcs7_public_key: "/etc/puppet/keys/public_key.pkcs7.pem"
