--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,10 +1,11 @@
 ---
 
 vimrc_repo:
-  ensure: 'present'
-  provider: 'git'
-  source: 'https://github.com/eoly/eoly-vimrc.git'
-  revision: 'eb9c2ea5f03dd1b904abe41507433a911e8bb707'
+  '/home/eolsen/.vimrc':
+      ensure: 'present'
+      provider: 'git'
+      source: 'https://github.com/eoly/eoly-vimrc.git'
+      revision: 'eb9c2ea5f03dd1b904abe41507433a911e8bb707'
 
 local_users:
   eolsen:
