--- a/hieradata/nodes/lnode1.yaml
+++ b/hieradata/nodes/lnode1.yaml
@@ -47,3 +47,4 @@ postfix_virtual:
   postmaster@sourcecurrent.com: "sourcecurrent@gmail.com"
   info@sourcecurrent.com: "sourcecurrent@gmail.com"
   noc@sourcecurrent.com: "sourcecurrent@gmail.com"
+  becky@beckyolsen.net: "beckyolsen88@gmail.com"
