--- a/environment.conf
+++ b/environment.conf
@@ -1,3 +1,2 @@
-modulepath          = modules:$basemodulepath
-config_version      = '/usr/bin/git --git-dir $confdir/environments/$environment/.git rev-parse HEAD'
-environment_timeout = 3m
+modulepath          = modules:site:$basemodulepath
+config_version      = 'scripts/config_version.sh $environmentpath $environment'
